--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7782,6 +7782,10 @@ input.authentication-input {
 .f-2 {
   font-size: 1.5em;
 }
+
+.f-12 {
+  font-size: 12px;
+}
 .notification-user-img {
   width: 50px;
   height: 50px;
@@ -8038,4 +8042,10 @@ input.authentication-input {
 
 .md-mrg-btm {
   margin-bottom: 2em !important;
+}
+
+.user-dropdown-dots {
+  border: 0 !important;
+  box-shadow: 0px 5px 5px #e1e5e7 !important;
+  background: #f6f7f8 !important;
 }
