--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -935,6 +935,9 @@ i.fa.fa-google {
   background-size: cover;
   background-position: center center;
 }
+.login-or-hide {
+  padding: 40px 0;
+}
 .or-line {
   position: relative;
   display: block;
