--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,12 @@
 body {
   font-family: "Roboto", sans-serif;
 }
+:root {
+  --primary-color: #1e90ff;
+}
+.theme-color {
+  color: var(--primary-color);
+}
 a {
   text-decoration: none;
   color: #0091ea;
