The below changes completed.,
1. Profile & Other profile - lInks changed

2. Edit Profile - Optional values delete updated.

3. Following button issue fixed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8321,3 +8321,19 @@ input.authentication-input {
   right: 6px;
   top: -17px;
 }
+.profile-links {
+  margin: 5px;
+  color: #8a96a3 !important;
+  font-size: 14px;
+}
+.profile-links i {
+  color: #8a96a3 !important;
+}
+.profile-links a {
+  color: inherit !important;
+}
+
+.profile-a:active,
+.profile-a:hover {
+  color: #00aff0 !important;
+}
