2. The report section have wrong information and user can’t select other options and can’t press the report button.

--- a/public/assets/css/style - Copy.css
+++ b/public/assets/css/style - Copy.css
@@ -4427,7 +4427,7 @@ span.subscribe-title {
     line-height: 24px;
 }
 .user-follow {
-    background: #00aff0 !important;
+    /* background: #00aff0 !important; */
     color: #fff !important;
     margin-top: 10px;
 }
