--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3970,6 +3970,7 @@ span.friend-username {
 .chat-wrapper .chat-image.chat-image-default {
   width: 50px;
   height: 50px;
+  object-fit: cover;
 }
 
 .chat-wrapper .chat-message {
