--- a/src/components/Accounts/Payments/PaymentsIndex.css
+++ b/src/components/Accounts/Payments/PaymentsIndex.css
@@ -1,6 +1,6 @@
 .payment-sec{
     margin-top: 85px;
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
     padding-bottom: 4em;
 }
 
