--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8397,3 +8397,170 @@ input.authentication-input {
   background-color: transparent!important;
   border-color: transparent!important;
 }
+
+/*Categories Section CSS*/
+
+.category-list-sec .category-sec .category-img{
+  max-width: 2em;
+}
+
+.category-list-sec .category-sec li a{
+  display: flex;
+}
+
+.category-list-sec .category-sec li .media-body{
+  padding-left: 1em;
+}
+
+.category-list-sec .category-sec li .media-body h5 {
+  color: #111;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.category-list-sec .category-sec li .media-body p{
+  font-size: 13px;
+  color: rgb(138, 150, 163);
+}
+
+.category-list-sec .category-sec{
+  padding: 0;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  overflow: auto;
+  margin-bottom: 0;
+  padding-top: 1em;
+}
+
+.category-list-sec .category-sec li{
+  margin-right:5em;
+}
+
+.category-list-sec .category-sec li:first-child{
+  margin-top: 15px;
+}
+
+.category-list-sec .category-sec li:last-child{
+  margin-right: 0;
+}
+
+.category-list-sec ::-webkit-scrollbar {
+  display: none;
+}
+
+.category-img-sec {
+  border:10px solid #e4e4e6;
+  width:4em;
+  height: 4em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.category-content-list {
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
+
+.category-content-list .title{
+  color: #242529;
+  font-size: 18px;
+  font-weight: 500;
+  padding-bottom: 0.8em;
+  border-bottom: 2px solid #000000;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+.category-content-list .category-content-list-sec {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  width: 100%;
+  border-bottom: 1px solid rgba(138, 150, 163, 0.25);
+}
+
+.category-content-info .category-list-info{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1em;
+  width: 100%;
+}
+
+.flex-content{
+  display: flex;
+  align-items: center;
+}
+
+.follow-btn {
+  font-size: 0.9em!important;
+  font-weight: 600!important;
+  padding: 0.5em 0.8em!important;
+  border-radius: 20px!important;
+}
+
+.follow-btn:hover,
+.follow-btn:focus {
+  background-color: #007bff!important;
+  border-color: #007bff!important;
+}
+
+.category-content-info{
+  margin-bottom: 0;
+  margin-top: 2em;
+}
+
+.category-content-info .category-list-info .category-content-img-sec{
+  position: relative;
+}
+
+.category-content-img-sec .category-content-img {
+  height: 60px;
+  width: 60px;
+  max-width: 100%;
+  border-radius: 50%;
+  position: relative;
+  object-fit: cover;
+}
+
+.category-info-details {
+  padding-left:1em;
+}
+
+.category-content-list .category-info-details h5 {
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    max-height: 4em;
+    font-size: 1em;
+    font-weight: 600;
+    color: #242529;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+}
+
+.category-content-list .category-info-details p {
+  margin-bottom: 0;
+}
+
+.category-content-info li {
+  border-bottom: 1px solid rgba(138, 150, 163, 0.25);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.05);
+  margin-top: 0;
+}
+/* 
+.category-content-info li:last-child{
+  border-bottom: 0;
+} */
+
+.category-content-info li a {
+  width: 100%;
+}
+
+.f-14 {
+  font-size: 14px;
+}
