--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -451,6 +451,9 @@ Version: 1.0
         padding-left: 20px;
         padding-right: 20px;
     }
+    .upload-profile-img-form{
+        margin-bottom: 2em;
+    }
 }
 
 
