--- a/src/components/Accounts/Profile/UploadProfilePicture.css
+++ b/src/components/Accounts/Profile/UploadProfilePicture.css
@@ -35,11 +35,12 @@
     width: 100%;
     margin-bottom: 0;
     text-align: center;
+    height: 18em;
   }
 
   .upload-profile-picture-card .upload-profile-picture-img{
       width:100%;
-      max-width: 25em;
+      max-width: 15em;
   }
 
   .upload-profile-img-btn {
