upload profile picture ui fixes done

--- a/src/components/Accounts/Profile/UploadProfilePicture.css
+++ b/src/components/Accounts/Profile/UploadProfilePicture.css
@@ -35,12 +35,13 @@
     width: 100%;
     margin-bottom: 0;
     text-align: center;
-    height: 18em;
+    height: 100%;
   }
 
   .upload-profile-picture-card .upload-profile-picture-img{
       width:100%;
-      max-width: 15em;
+      max-width: 20em;
+      height: 20em;
   }
 
   .upload-profile-img-btn {
