--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -454,11 +454,14 @@ Version: 1.0
     .upload-profile-img-form{
         margin-bottom: 2em;
     }
-    .drawer__wrapper ul.list-inline{
+    /* .drawer__wrapper ul.list-inline{
         margin-bottom:1rem;
-    }
+    } */
     .drawer__wrapper .pull-left.side-user-head{
         float: none!important;
+    }
+    .drawer__header{
+        padding-bottom: 18px;
     }
 }
 
