--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1622,6 +1622,10 @@ button.view-comments {
   font-weight: 600;
 }
 
+.comment-row .alignleft .card-title {
+  margin-bottom: 0!important;
+}
+
 .cat {
   display: inline-block;
   margin-bottom: 1rem;
@@ -1641,7 +1645,7 @@ span.comment-message {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: normal;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   max-height: 4em;
@@ -2455,7 +2459,7 @@ a.main-header-menu.icon-with-round-hover {
   width: 100%;
   height: 48px;
   background-color: transparent;
-  border: 1px solid rgba(138, 150, 163, 0.25);
+  border: 1px solid rgba(138,150,163,.5);
   border-radius: 5px;
   font-size: 14px;
   font-weight: 600;
@@ -2463,7 +2467,7 @@ a.main-header-menu.icon-with-round-hover {
 .floating-input:focus,
 .floating-select:focus {
   outline: none;
-  border-bottom: 1px solid rgba(138, 150, 163, 0.25);
+  border-bottom: 1px solid rgba(138,150,163,.5);
   padding-left: 20px;
 }
 .post-icons button.btn.btn-default {
@@ -7855,9 +7859,31 @@ input.authentication-input {
 
 .sent-tip-modal .custom-control-label {
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 600;
   padding-left: 1.2em;
-  color: #0091ea;
+  color: rgb(117, 117, 117);
+}
+
+.sent-tip-modal .choose-payment-label{
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  color: #333333;
+}
+
+.close{
+  width: 2em;
+  height: 2em;
+  background: #007bff!important;
+  border-radius: 50%;
+  opacity: 1;
+  line-height: 0!important;
+  padding: 0!important;
+}
+
+.close span{
+  font-size: 21px;
+  color: #fff;
 }
 
 .sent-tip-modal .custom-control-inline {
@@ -8517,4 +8543,18 @@ button {
   background-color: #007bff!important;
   color: #ffffff!important;
   border-radius: 10px!important;
+}
+.modal-content {
+  border-radius: 6px!important;
+  border:0!important;
+  box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
+}
+
+.sent-tip-modal .header-userinfo{
+  display: flex;
+  align-items: center;
+}
+
+.sent-tip-modal .body-userinfo{
+  padding-left:1em;
 }
