--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8558,3 +8558,15 @@ button {
 .sent-tip-modal .body-userinfo{
   padding-left:1em;
 }
+
+
+.valid-feedback{
+  text-align: left;
+  font-size: 100%!important;
+}
+
+.invalid-feedback{
+  text-align: left;
+  font-size: 100%!important;
+}
+
